:recycle: Refactor: FavoritesService